add react, dropdown & hover

--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "bustling-binary",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.5.4",
-    "@astrojs/vercel": "^7.3.5",
-    "@fontsource-variable/noto-sans": "^5.0.1",
-    "astro": "^4.3.6",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "prettier-plugin-astro": "^0.13.0"
-  }
+    "name": "bustling-binary",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/check": "^0.5.4",
+        "@astrojs/react": "^3.1.0",
+        "@astrojs/vercel": "^7.3.5",
+        "@fontsource-variable/noto-sans": "^5.0.1",
+        "@types/react": "^18.2.65",
+        "@types/react-dom": "^18.2.21",
+        "astro": "^4.3.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^5.3.3"
+    },
+    "devDependencies": {
+        "@typescript-eslint/parser": "^7.2.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-astro": "^0.31.4",
+        "prettier": "^3.2.5",
+        "prettier-plugin-astro": "^0.13.0"
+    }
 }
