--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.5.4",
+        "@astrojs/node": "^8.2.3",
         "@astrojs/react": "^3.1.0",
         "@astrojs/vercel": "^7.3.5",
         "@fontsource-variable/noto-sans": "^5.0.1",
+        "@react-email/components": "^0.0.15",
+        "@react-email/render": "^0.0.12",
         "@types/react": "^18.2.65",
         "@types/react-dom": "^18.2.21",
         "astro": "^4.3.6",
+        "crypto": "^1.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-email": "^2.1.0",
+        "resend": "^3.2.0",
         "typescript": "^5.3.3"
     },
     "devDependencies": {
