--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.1.0",
     "@astrojs/vercel": "^7.3.6",
     "@fontsource-variable/noto-sans": "^5.0.1",
+    "@hookform/error-message": "^2.0.1",
     "@react-email/components": "^0.0.15",
     "@react-email/render": "^0.0.12",
     "@types/react": "^18.2.65",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^2.1.0",
+    "react-hook-form": "^7.51.2",
     "resend": "^3.2.0",
     "typescript": "^5.3.3"
   },
